--- a/paper.tex
+++ b/paper.tex
@@ -1361,7 +1361,7 @@ If the above argument (and beliefs) is correct, then the anomaly should be captu
 	w_2w'_3\ (= w_3w'_2).
 \end{equation}
 
-\subsection{$[SO(4n'_c+2)\times SU(2n_f)]/\bZ_2$}
+\subsection{$[\SO(4n'_c+2)\times \SU(2n_f)]/\bZ_2$}
 \label{sec:so(2odd)}
 
 \subsubsection{Cohomology of $BPSO(4n'_c+2)$}
