--- a/ref.bib
+++ b/ref.bib
@@ -381,3 +381,18 @@ MRREVIEWER = {J. F. Adams},
 
 
 
+@article{Thorngren:2014pza,
+    author = "Thorngren, Ryan",
+    title = "{Framed Wilson Operators, Fermionic Strings, and Gravitational Anomaly in 4D}",
+    eprint = "1404.4385",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-th",
+    doi = "10.1007/JHEP02(2015)152",
+    journal = "JHEP",
+    volume = "02",
+    pages = "152",
+    year = "2015"
+}
+
+
+
